--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "clash-royale-bot",
+  "name": "clash-royale-webhook",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"  <-- ¡Esta línea es la clave!
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
+  },
+  "engines": {
+    "node": "16.x"
+  }
 }
