--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"  <-- ¡Esta línea es la clave!
+    "start": "node src/index.js" 
   },
   "dependencies": {
     "express": "^4.18.2",
